--- a/base/server.yaml
+++ b/base/server.yaml
@@ -1,15 +1,24 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
   creationTimestamp: null
   labels:
-    run: web-server
+    app: web-server
   name: web-server
 spec:
-  containers:
-  - image: nginx
-    name: web-server
-    resources: {}
-  dnsPolicy: ClusterFirst
-  restartPolicy: Always
+  replicas: 1
+  selector:
+    matchLabels:
+      app: web-server
+  strategy: {}
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        app: web-server
+    spec:
+      containers:
+      - image: nginx
+        name: nginx
+        resources: {}
 status: {}
